// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MyAwesomeApp > should match snapshot 1`] = `
<div>
  <div
    data-testid="div-app"
  >
    <h1
      data-testid="first-name-title"
    >
      Andres
    </h1>
    <h2>
      Frias
    </h2>
    <p
      class="mi-clase-favorita"
    >
      Destiny 2, Pokemon, Metal Gear, Helldivers 2
    </p>
    <h1>
      Activo
    </h1>
    <p
      style="background-color: red; border-radius: 10px; padding: 10px; margin-top: 30px;"
    >
      {"zipcode":"ABC-123","country":"Dominican Republic"}
    </p>
  </div>
</div>
`;

exports[`MyAwesomeApp > should match snapshot 2`] = `
<div
  data-testid="div-app"
>
  <h1
    data-testid="first-name-title"
  >
    Andres
  </h1>
  <h2>
    Frias
  </h2>
  <p
    class="mi-clase-favorita"
  >
    Destiny 2, Pokemon, Metal Gear, Helldivers 2
  </p>
  <h1>
    Activo
  </h1>
  <p
    style="background-color: red; border-radius: 10px; padding: 10px; margin-top: 30px;"
  >
    {"zipcode":"ABC-123","country":"Dominican Republic"}
  </p>
</div>
`;
